Added search history and display Current and next five days.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2,6 +2,10 @@
     display: flex;
 }
 
-#geo-location:first-child {
+#geo-location > div {
     flex: 1 1 100%;
+}
+
+[data-bs-toggle="tooltip"] {
+    cursor: pointer;
 }
